[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "client"
version = "0.1.0"
authors = [
    {name = "Douglas Luman", email = "dluman@allegheny.edu"}
]
readme = "README.md"
description = "Python CLI script testing with full support for arbitrary command line flags."
